feat: 百度地图 Android SDK V7.6.1 在 React Native 中无法拖动问题复现

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -80,9 +80,12 @@ repositories {
 }
 
 def kotlin_version = getExtOrDefault("kotlinVersion")
+def BaiduMapSDKBaseVersion = "7.6.4"
 
 dependencies {
   implementation "com.facebook.react:react-android"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+  implementation "com.baidu.lbsyun:BaiduMapSDK_Map:$BaiduMapSDKBaseVersion"
 }
 
