--- a/example/android/gradle.properties
+++ b/example/android/gradle.properties
@@ -37,3 +37,5 @@ newArchEnabled=true
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+org.gradle.java.home=/Users/lwl/.sdkman/candidates/java/21.0.1-zulu/zulu-21.jdk/Contents/Home
